--- a/js/split-join.html
+++ b/js/split-join.html
@@ -5,6 +5,19 @@
     <title>Title</title>
 </head>
 <body>
+"<br>Mercury</br><br>Venus</br><br>Earth</br><br>Mars</br><br>Jupiter</br><br>Saturn</br><br>Uranus</br><br>Neptune</br>"
+
+<ul>
+    <li>Mercury</li>
+    <li>Venus</li>
+   <li>Earth</li>
+    <li>Mars</li>
+    <li>Jupiter</li>
+    <li>Saturn</li>
+    <li>Uranus</li>
+    <li>Neptune</li>
+</ul>
+
 <script src= "planets-string-2.js">
 
 </script>
