--- a/js/split-join.html
+++ b/js/split-join.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<h1>The planets in our Solar System</h1>
+<h1>The planets in our Solar System are:</h1>
 "<br>Mercury</br><br>Venus</br><br>Earth</br><br>Mars</br><br>Jupiter</br><br>Saturn</br><br>Uranus</br><br>Neptune</br>"
 
 <ul>
