Codeup Html webpage 2

--- a/js/github.html
+++ b/js/github.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <title>GitHub</title>
 </head>
+<body>
 
+<img src="GitHub-logo.png">
 <table>
     <tr>
         <th><a href="">Pull requests  </a> </th>
@@ -27,31 +29,27 @@
     <tr>
         <th><h4>Codeup's Dev Team</h4></th>
     </tr>
-    <tr>
-        <th>Kent Beck</th>
-        <th>Codeup instruction</th>
-        <th>Martin Fowler</th>
-            <td> Member 1 Team</td>
-            <td>Codeup Instruction Staff Member 1 Team</td>
-            <td>Member 0 Teams</td>
-    </tr>
+
     <tr>
         <td><a href=""></a><img src="https://fer-uig.glitch.me" alt="user-icon" /> </td>
-        <td>KentBeck</td>
-        <td>Member</td>
-        <td>1 Team</td>
+        <td><a href="">Kent Beck</a> </td>
+        <td> X </td>
+        <td> Team </td>
+        <td> Member</td>
     </tr>
     <tr>
         <td><a href=""><img src="https://fer-uig.glitch.me" alt="user-icon" /></a> </td>
-        <td>CodeupStaff</td>
-        <td>Member</td>
-        <td>2 Team</td>
+        <td><a href="">Codeup Staff</a> </td>
+        <td> X </td>
+        <td> Team  </td>
+        <td> Member</td>
     </tr>
     <tr>
         <td><a href=""><img src="https://fer-uig.glitch.me" alt="user-icon" /></a> </td>
-        <td>MartinF</td>
-        <td>Member</td>
-        <td>3 Team</td>
+        <td><a href="">Martin F</a> </td>
+        <td> X </td>
+        <td> Team </td>
+        <td> Member</td>
     </tr>
 
 </table>
