--- a/js/forms.html
+++ b/js/forms.html
@@ -5,7 +5,7 @@
     <title>Register With Us</title>
 </head>
 <body>
-<form method="POST" action="https://www.elformo.com/forms/dcf71cc8-4e10-41e8-ac58-fb7d20205c7b">
+<form method="POST" action="https://request-inspector.glitch.me/">
 
     <label for="username">Username</label>
     <input id="username" name="username" type="text"placeholder="Enter your email address" >
