--- a/welcome.html
+++ b/welcome.html
@@ -65,8 +65,8 @@
             <td>Unlimited Support</td>
         </tr>
     </table>
-    <p> <em>All products come with our qualify gaurantee&trade;.</em></p>
-    <a href="#top">Go to the top of the page.</a>
+    <footer> <em>All products come with our qualify gaurantee&trade;.</em></footer>
+    <p> <div> <a href="#top">Go to the top of the page.</a> </div></p>
 </div>
 
 </body>
