--- a/js/github.html
+++ b/js/github.html
@@ -18,10 +18,10 @@
 <img src="codeup-logo.png"width="50" height="50" alt="codeuplogo"><h3>Codeup</h3>
 <table>
     <tr>
-        <th><a href=""> Repositories </a></th>
-        <th><a href=""> People </a></th>
-        <th><a href=""> Teams </a> </th>
-        <th><a href=""> Projects </a> </th>
+        <th><a href=""> Repositories <span> 39</span> </a></th>
+        <th><a href=""> People <span>15</span> </a></th>
+        <th><a href=""> Teams <span>7</span></a> </th>
+        <th><a href=""> Projects <span>0</span></a> </th>
         <th><a href=""> Settings </a></th>
     </tr>
 </table>
@@ -32,21 +32,21 @@
 
     <tr>
         <td><a href=""></a><img src="https://fer-uig.glitch.me" alt="user-icon" /> </td>
-        <td><a href="">Kent Beck</a> </td>
+        <td><a href="">Kent <br>Beck</a> </td>
         <td> X </td>
         <td> Team </td>
         <td> Member</td>
     </tr>
     <tr>
         <td><a href=""><img src="https://fer-uig.glitch.me" alt="user-icon" /></a> </td>
-        <td><a href="">Codeup Staff</a> </td>
+        <td><a href="">Codeup <br>Staff</a> </td>
         <td> X </td>
         <td> Team  </td>
         <td> Member</td>
     </tr>
     <tr>
         <td><a href=""><img src="https://fer-uig.glitch.me" alt="user-icon" /></a> </td>
-        <td><a href="">Martin F</a> </td>
+        <td><a href="">Martin<br> F</a> </td>
         <td> X </td>
         <td> Team </td>
         <td> Member</td>
