github weebsite added different pics

--- a/js/github.html
+++ b/js/github.html
@@ -38,14 +38,14 @@
         <td> Member</td>
     </tr>
     <tr>
-        <td><a href=""><img src="https://fer-uig.glitch.me" alt="user-icon" /></a> </td>
+        <td><a href=""><img src="https://fer-uig.glitch.me?u=2" alt="user-icon" /></a> </td>
         <td><a href="">Codeup <br>Staff</a> </td>
         <td> X </td>
         <td> Team  </td>
         <td> Member</td>
     </tr>
     <tr>
-        <td><a href=""><img src="https://fer-uig.glitch.me" alt="user-icon" /></a> </td>
+        <td><a href=""><img src="https://fer-uig.glitch.me?u=3" alt="user-icon" /></a> </td>
         <td><a href="">Martin<br> F</a> </td>
         <td> X </td>
         <td> Team </td>
