--- a/js/forms.html
+++ b/js/forms.html
@@ -16,7 +16,7 @@
     <br>
 
     <input type="submit"><br>
-  <p><div> <label>Bio</label></div>
+  <p><div> <label>Bio:</label></div>
 <textarea id="myTextArea"
           rows="4"
           cols = "80">
@@ -40,7 +40,7 @@
         <button type="Submit">Submit</button>
     </div>
 
-   <p> <label for="Browser">Choose Your Web Browser</label>
+   <p> Choose Your Web Browser
 
     <select name="safari" id="safari">
     <option
