--- a/welcome.html
+++ b/welcome.html
@@ -3,16 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Veridian Dynamics</title>
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
 <a name="top"></a>
-<h1>Welcome to Veridian Dynamics!</h1>
-<p>
-    At Veridian Dynamics, <strong>we </strong> solve <em>your</em> problems with <strong><em>technology</em></strong>
-</p>
+<div class="container">
+<h1 class="fancy-header">Welcome to Veridian Dynamics!</h1>
+
+    <p>At Veridian Dynamics, <strong>we </strong> solve <em>your</em> problems with <strong><em>technology</em></strong>
+</p></div>
 <hr>
 <div>
-    <h2>Core Values</h2>
+    <h2 class="container">Core Values</h2>
     <p>
         <ul>
             <li>Competence</li>
@@ -20,7 +23,7 @@
             <li>Technology</li>
         </ul>
     </p>
-    <h2>Our Process</h2>
+    <h2 class="container">Our Process</h2>
     <p>
         <ol>
             <li>Plan</li>
@@ -28,7 +31,7 @@
             <li>Implement</li>
         </ol>
     </p>
-    <h2>2020 Vision</h2>
+    <h2 class="container">2020 Vision</h2>
     <p>
         <ul>
             <li>Become #1 in Technology</li>
@@ -37,7 +40,7 @@
         </ul>
     </p>
     <hr>
-    <h2>Company Vision</h2>
+    <h2 class="container">Company Vision</h2>
     <img src="https://www.pexels.com/photo/461077/download/" width="300" height="300" alt="working on laptop">
     <img src="js/pexels-elti-meshau-333850.jpg" width="300" height="300" alt="photo of a man">
     <img src="https://www.pexels.com/photo/33834/download/" width="300" height="300" alt="sunset">
