--- a/js/forms.html
+++ b/js/forms.html
@@ -7,7 +7,7 @@
 <body>
 <form method="POST" action="https://request-inspector.glitch.me/">
 
-    <label for="username">Username</label>
+    <label for="username">Email</label>
     <input id="username" name="username" type="text"placeholder="Enter your email address" >
     <br>
 
@@ -26,14 +26,14 @@
 
   <p>How Did You Here about Us?</p>
     <div>
-       <input type="checkbox" id="contactChoice1" name="contact" value="text">
-        <label for="contactChoice1">Bilboard</label>
+       <input type="checkbox" id="bilboard" name="contact" value="text">
+        <label for="bilboard">Bilboard</label>
 
-        <input type="checkbox" id="contactChoice2" name="contact" value="text">
-        <label for="contactChoice2">Website</label>
+        <input type="checkbox" id="radio" name="contact" value="text">
+        <label for="radio">Radio Advertisement</label>
 
-        <input type="checkbox" id="contactChoice3" name="contact" value="text">
-        <label for="contactChoice3">Referred</label>
+        <input type="checkbox" id="internet" name="contact" value="text">
+        <label for="internet">Other</label>
 
     </div>
     <div>
