--- a/js/forms.html
+++ b/js/forms.html
@@ -26,19 +26,17 @@
 
   <p>How Did You Here about Us?</p>
     <div>
-       <input type="checkbox" id="bilboard" name="contact" value="text">
+       <input type="checkbox" id="bilboard" name="contact" value="bilboard">
         <label for="bilboard">Bilboard</label>
 
-        <input type="checkbox" id="radio" name="contact" value="text">
+        <input type="checkbox" id="radio" name="contact" value="radio-advertisement">
         <label for="radio">Radio Advertisement</label>
 
-        <input type="checkbox" id="internet" name="contact" value="text">
+        <input type="checkbox" id="internet" name="contact" value="other">
         <label for="internet">Other</label>
 
     </div>
-    <div>
-        <button type="Submit">Submit</button>
-    </div>
+
 
    <p> Choose Your Web Browser
 
@@ -52,6 +50,9 @@
 
 
     </select></p>
+    <div>
+        <button type="Submit">Submit</button>
+    </div>
 </form>
 
 </body>
