--- a/js/forms.html
+++ b/js/forms.html
@@ -5,7 +5,7 @@
     <title>Register With Us</title>
 </head>
 <body>
-<form method="POST" action="https://request-inspector.glitch.me/">
+<form method="Post" action="https://request-inspector.glitch.me/">
 
     <label for="username">Email</label>
     <input id="username" name="username" type="text"placeholder="Enter your email address" >
