--- a/js/loops.html
+++ b/js/loops.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>LoopsJs</title>
 </head>
 <body>
 <script src="for_loops.js">
