--- a/js/split-join.html
+++ b/js/split-join.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Split</title>
 </head>
 <body>
 <h1>The planets in our Solar System are:</h1>
