--- a/iterating_arrays_js.html
+++ b/iterating_arrays_js.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Iterating-Js</title>
 </head>
 <body>
 <script src ="js/iterating.js">
