--- a/html-for-css/flexbox-fundamentals-excercise.html
+++ b/html-for-css/flexbox-fundamentals-excercise.html
@@ -16,7 +16,7 @@
             <div class="border green-box"></div>
             <div class="border green-box"></div>
             <div class="border green-box"></div>
-            <div class="border green-box"></div>
+            <div class="border green-box" id="gbox"></div>
         </section>
         <h2>This is a Card!</h2>
         <section>
