moving files to correct folder

--- a/conditionals.html
+++ b/conditionals.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ExternalJs</title>
+    <title>Title</title>
 </head>
 <body>
-<script src="external.js">
+
+<script src="js/conditionals.js">
+
+
+
 
 </script>
-
 </body>
 </html>
