--- a/github.html
+++ b/github.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<img src="GitHub-logo.png">
+<img src="img/GitHub-logo.png">
 <table>
     <tr>
         <th><a href="">Pull requests  </a> </th>
@@ -15,7 +15,7 @@
         <th><a href=""> Explore </a> </th>
     </tr>
 </table>
-<img src="codeup-logo.png"width="50" height="50" alt="codeuplogo"><h3>Codeup</h3>
+<img src="img/codeup-logo.png" width="50" height="50" alt="codeuplogo"><h3>Codeup</h3>
 <table>
     <tr>
         <th><a href=""> Repositories <span> 39</span> </a></th>
