--- a/external_js.html
+++ b/external_js.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>ExternalJs</title>
 </head>
 <body>
-<script src="objects.js">
+<script src="js/external.js">
 
 </script>
+
 </body>
 </html>
