--- a/loops.html
+++ b/loops.html
@@ -5,12 +5,12 @@
     <title>LoopsJs</title>
 </head>
 <body>
-<script src="for_loops.js">
+<script src="js/for_loops.js">
 
 </script>
-<script src="break_and_continue.js">
+<script src="js/break_and_continue.js">
     </script>
-<script src="while.js">
+<script src="js/while.js">
 
 </script>
 </body>
