--- a/objects.html
+++ b/objects.html
@@ -5,11 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-
-<script src="conditionals.js">
-
-
-
+<script src="js/objects.js">
 
 </script>
 </body>
